# pybotron

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: IBVS_example.py  cam_control_lines.py  cam_control_polar.py  cam_projection_cube.py  cam_projection_line.py  move_robot.py  plot_robot.py  plot_robot_minimal.py  plucker_IBVS.py  plucker_line.py  pose_control_dq.py  pose_control_homog.py
pybotron/: __init__.py  main_module.py
pybotron.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
