[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybotron" 
version = "0.2.1"
description = "a package that makes simulating robots on python more like matlab"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="higifnr", email="abdelhakimboubaker6@gmail.com"}]
license = {text="MIT"}
dependencies = ["numpy", "scipy", "matplotlib", "opencv-python"] # use the name from pip install "pacakge_name"
