[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybotron" 
version = "1.2.0"
description = "a package that makes simulating robots on python more like matlab"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="higifnr", email="abdelhakimboubaker6@gmail.com"}]
license = {text="Apache-2.0"}
dependencies = ["numpy", "scipy", "matplotlib", "opencv-python"] # use the name from pip install "pacakge_name"

[project.urls]
Homepage = "https://github.com/higifnr/pybotron"
Repository = "https://github.com/higifnr/pybotron"
